Add setup instructions for IDE as developer setup (#707)